# kalimba-app

./: Cargo.toml  Trunk.toml  index.html
docs/: index.html  kalimba-app-20da1fd17fdc49cb.js  kalimba-app-20da1fd17fdc49cb_bg.wasm
src/: lib.rs
