[package]
name = "kalimba-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gloo-net = { version = "0.5", features = ["http"] }
gloo-console = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window","Document",
  "AudioContext","BaseAudioContext","AudioDestinationNode",
  "AudioBuffer","AudioBufferSourceNode","AudioScheduledSourceNode",
  "GainNode","AudioParam",
  "Response","Request","Headers"
] }

# 任意（パニック時のコンソール出力）
console_error_panic_hook = "0.1"